[gd_scene load_steps=4 format=2]

[ext_resource path="res://Game/Game.gd" type="Script" id=1]
[ext_resource path="res://Game/Flag.png" type="Texture" id=2]
[ext_resource path="res://GameBoard/GameBoard.tscn" type="PackedScene" id=3]

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 736.0
margin_bottom = 768.0
color = Color( 0.517647, 0.921569, 0.666667, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundMenu" type="ColorRect" parent="."]
margin_right = 736.0
margin_bottom = 64.0
color = Color( 0.552941, 0.756863, 0.34902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FlagSprite" type="Sprite" parent="."]
position = Vector2( 145.25, 32 )
scale = Vector2( 0.0915842, 0.0924856 )
texture = ExtResource( 2 )

[node name="FlagLabel" type="Label" parent="."]
margin_left = 153.25
margin_top = 16.0
margin_right = 193.25
margin_bottom = 40.0
text = "000"
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]

[node name="TimerLabel" type="Label" parent="."]
margin_left = 368.0
margin_top = 16.0
margin_right = 408.0
margin_bottom = 40.0
text = "000"
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameBoard" parent="." instance=ExtResource( 3 )]
position = Vector2( 368, 416 )

[node name="WinLose" type="Label" parent="."]
visible = false
margin_left = 368.0
margin_top = 312.0
margin_right = 408.0
margin_bottom = 326.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="lose_game" from="GameBoard" to="." method="_on_GameBoard_lose_game"]
[connection signal="win_game" from="GameBoard" to="." method="_on_GameBoard_win_game"]

[editable path="GameBoard"]
